--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,18 @@
 <resources>
-    <string name="app_name">BMI Calculator</string>
+    <string name="app_name">BMI CALCULATOR</string>
     <string name="title">BMI CALCULATOR</string>
-    <string name="weight_label">Your weight in Kg:</string>
-    <string name="height_label">Your height in cm:</string>
+    <string name="weight_label">Your weight in Kg</string>
+    <string name="height_label">Your height in cm</string>
     <string name="button_calculate">Calculate</string>
     <string name="your_score">Your Score</string>
     <string name="reset">Reset</string>
     <string name="share">Share</string>
     <string name="ideal_state">Congratulations! Your weight is ideal!</string>
+    <string name="underweight">Underweight</string>
+    <string name="normal_weight">Normal weight</string>
+    <string name="over_weight">Class I  Obesity - Overweight</string>
+    <string name="obesity">Class II  Obesity</string>
+    <string name="morby_obesity">Class III  Obesity Morbid Obesity</string>
+    <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
 </resources>
